# mono-control-shim

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/design/: command-conventions.md
mono_control_shim/: broker.py  cli.py
mono_control_shim/schema/: wire-schema.json
mono_control_shim/verbs/: __init__.py  git.py  mono_config.py
tests/: __init__.py  test_broker.py  test_cli.py  test_schema_cli.py  test_verbs_git.py  test_verbs_mono_config.py
